@@ -21,6 +21,7 @@ Revision history for Date-Easy
     [Docs]
     * Added "Language" section to "Limitations"
     * Added "Inspiration and Credits" section to POD
+    * Documented effects of upstream bug RT/105031
 
 0.03      2017-02-21 19:45:46-08:00 America/Los_Angeles
 
